# ha-pyrovigil

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml
blueprints/automation/: fire_notification.yaml
custom_components/pyrovigil/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  geo_location.py  manifest.json  mappings.py  models.py  sensor.py  strings.json
custom_components/pyrovigil/translations/: en.json  pt.json
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py  test_mappings.py  test_models.py  test_sensor.py
tests/fixtures/: anepc_empty.json  anepc_response.json  rcm_d0.json  warnings.json
